--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
-    box-sizing: border-box;
-    font-size: 0;
+  box-sizing: border-box;
+  font-size: 0;
 }
   
 *,
@@ -8,7 +8,9 @@ html {
 *::after {
   box-sizing: inherit;
 }
-  
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,900|Roboto:400,700,900');
+
 .main,
 .footer,
 .slider {
@@ -54,251 +56,250 @@ html {
   float: right;
 }
   
-  .clearfix::after {
-    content: '';
-    clear: both;
-    display: table;
-  }
+.clearfix::after {
+  content: '';
+  clear: both;
+  display: table;
+}
   
-  .nav_item {  
-    display: inline-block;
-  }
+.nav_item {  
+  display: inline-block;
+}
   
-  .nav_item a {
-    text-decoration: none;
-    font-size: 14px;
-    line-height: 40px;
-    font-family: "OpenSans", sans-serif;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #515151;
-    padding: 0 15px;
-  }
+.nav_item a {
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 40px;
+  font-family: "OpenSans", sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #515151;
+  padding: 0 15px;
+}
   
-  .nav_item:last-of-type a {
-    padding-right: 0;
-  }
+.nav_item:last-of-type a {
+  padding-right: 0;
+}
   
-  .nav_item a:hover,
-  .nav_item a:focus {
-    color: #1abc9c;
-  }
+.nav_item a:hover,
+.nav_item a:focus {
+  color: #1abc9c;
+}
 
 .slider {    
-    position: relative;
-    height: 600px;
-    background-image: url(../img/slide4.png);
-    background-repeat: no-repeat;
-    object-fit: cover;
-
+  position: relative;
+  height: 600px;
+  background-image: url(../img/slide4.png);
+  background-repeat: no-repeat;
+  object-fit: cover;
 }
 
 .opacity {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 600px;
-    background-color: #000002;
-    opacity: 0.522;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 600px;
+  background-color: #000002;
+  opacity: 0.522;
 }
 
- .slider_comment {
-    position: absolute;
-    display: block;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 900px;
- }
-
- .slider_head,
- .slider_text {
-     color: #fff;
-     text-transform: uppercase;
-     font-family: "Roboto", sans-serif;
-     text-align: center;
-
- }
-
- .slider_head {
-    font-size: 60px;
-    line-height: 84px;
-    font-weight: bold;
-
- }
-
- .slider_text {
-    font-size: 24px;
-    line-height: 54px;
-    
-
- }
- .slider_comment {
-    position: relative;
+.slider_content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.slider_comment::before,
-.slider_comment::after {
-    content: '';
-    position: absolute;
-    width: 104px;
-    height: 104px;
-    bottom: 0;
-    background: #4ec3c6;
-    background-image: url(../img/_.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    opacity: 0.651;
-    cursor: pointer;
+.slider_comment {
+  width: 900px;
 }
 
-.slider_comment::before {
-    left: 0;
-    transform: translateX(-100%);
+.slider_head,
+.slider_text {
+  color: #fff;
+  text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
 }
 
-.slider_comment::after {
-    right: 0;
-    bottom: 0;
-    transform: rotate(180deg) translateX(-100%);
+.slider_head {
+  font-size: 60px;
+  line-height: 84px;
+  font-weight: bold;
+}
+
+.slider_text {
+  font-size: 24px;
+  line-height: 54px;
+}
+
+.left_arrow,
+.right_arrow {
+  width: 104px;
+  height: 104px;
+  bottom: 0;
+  background: #4ec3c6;
+  background-image: url(../img/_.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.651;
+  cursor: pointer;
+}
+
+.right_arrow {
+  transform: rotate(180deg)
 }
 
 .collection_header {
-    position: relative;
-    font-size: 48px;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: #515151;
-    text-transform: uppercase;
-    padding-bottom: 30px;
-    margin-bottom: 70px;
+  position: relative;
+  font-size: 48px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #515151;
+  text-transform: uppercase;
+  padding-bottom: 30px;
+  margin-bottom: 70px;
 }
   
 .collection_header::after {
-    content: "";
-    position: absolute;
-    width: 164px;
-    height: 8px;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    background: #1abc9c;
+  content: "";
+  position: absolute;
+  width: 164px;
+  height: 8px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #1abc9c;
 }
   
 .new_collection {
-    padding-top: 100px;
-    padding-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
   
-  .collection__item {
-    position: relative;
-    display: inline-block;
-    width: 255px;
-    height: 322px;
-    margin-right: 30px;
-  }
+.collection__item {
+  position: relative;
+  display: inline-block;
+  width: 255px;
+  height: 322px;
+  margin-right: 30px;
+}
   
-  .collection__item:nth-of-type(4n) {
-    margin-right: 0px;
-  }
+.collection__item:nth-of-type(4n) {
+  margin-right: 0px;
+}
   
-  .collection__item:hover .price,
-  .collection__item:focus .price {
-    background: #1abc9c;
-  }
+.collection__item_img {
+  display: block;
+  width: 255px;
+  height: 322px;
+  object-fit: cover;
+}
   
-  .collection__item:hover .price span,
-  .collection__item:focus .price span {
-    background: #7fd9c7;
-  }
+.price {
+  position: absolute;
+  bottom: 0;
+  display: block;
+  width: 255px;
+  height: 40px;
+  background: #323232;
+  transition: .3s ease-in-out;
+}
   
-  .collection__item_img {
-    display: block;
-    width: 255px;
-    height: 322px;
-    /* margin: auto auto; */
-    object-fit: cover;
-    /* overflow: hidden; */
-  }
+.price p {
+  font-size: 18px;
+  line-height: 40px;
+  padding-left: 20px;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;  
+  color: #fff;
+}
   
-  .price {
-    position: absolute;
-    bottom: 0;
-    display: block;
-    width: 255px;
-    height: 40px;
-    background: #323232;
-  }
-  
-  .price p {
-    font-size: 18px;
-    line-height: 40px;
-    padding-left: 20px;
-    font-family: "Roboto", sans-serif;
-    text-transform: uppercase;
-    font-weight: bold;  
-    color: #fff;
-  }
-  
-  .price span {
-    float: right;
-    width: 54px;
-    text-align: center;
-    background: #8c8c8c;
-  }
+.price span {
+  float: right;
+  width: 54px;
+  text-align: center;
+  background: #8c8c8c;
+  transition: .3s ease-in-out;
+}
 
-  .udisp_icons {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 255px;
-      height: 282px;
-      background: #000;
-      border: 10px solid #fff;
-      opacity: 0.549;
-      display: none;
-      
+.collection__item:hover .price,
+.collection__item:focus .price {
+  background: #1abc9c;
+}
+  
+.collection__item:hover .price span,
+.collection__item:focus .price span {
+  background: #7fd9c7;
+}
 
-  }
+.udisp_icons {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 255px;
+  height: 282px;
+  background: transparent;
+  border: 10px solid transparent;
+  opacity: 0.549;
+  transition: .3s ease-in-out;
+}
 
-  .collection__item:hover .udisp_icons,
-  .collection__item:focus .udisp_icons {
+.collection__item:hover .udisp_icons,
+.collection__item:focus .udisp_icons {
+  background: #000;
+  border: 10px solid #fff;
+}
+
+.icons {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 255px;
+  height: 282px;
+  display: none;
+}
+
+.collection__item:hover .icons,
+.collection__item:focus .icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.icon_wrapper {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .icon_wrapper {
-      display: flex;
-      justify-content: space-between;
-  }
-
+    justify-content: space-between;
+}
   
-  .icon,
-  .long_icon {
-    height: 50px;
-    border: #fff solid 1px;
-    margin: 5px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
+.icon,
+.long_icon {
+  height: 50px;
+  border: #fff solid 1px;
+  margin: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  transition: .3s ease-in-out;
+}
 
 .icon {
   width: 50px;
 }
   
-  .long_icon {
-    width: 166px;
-    
+.long_icon {
+  width: 166px;
 }
-
-
 
 .long_icon_comment {
   display: inline-block;
@@ -309,11 +310,13 @@ html {
   font-family: "OpenSans", sans-serif;
 }
 
-.icon:hover,
-.long_icon:hover {
+.icon:hover {
   background-color: #1abc9c;
   border: #1abc9c solid 1px;
-  opacity: 1;
+}
+
+.long_icon:hover {
+  background-color: #323232;
 }
 
 .footer {
