--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ html {
   height: 104px;
   bottom: 0;
   background: #4ec3c6;
-  background-image: url(../img/_.png);
+  background-image: url(../img/arrow.png);
   background-position: center;
   background-repeat: no-repeat;
   opacity: 0.651;
